--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ludw1gj/binary-fractal-tree",
-  "version": "0.5.7",
+  "version": "0.5.8",
   "description": "Draws a binary fractal tree using a HTML5 canvas and a 2D context.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -24,7 +24,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ludw1gj/binary-fractal-tree.git"
+    "url": "git+https://gitlab.com/ludw1gj/binary-fractal-tree.git"
   },
   "files": [
     "lib/**/*"
